<resources>
    <string name="app_name">Party Nearby</string>

    <string name="lbl_terms">Terms &amp; Conditions</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="guest_list">Guest List</string>
    <string name="event_details">Event detail</string>
    <string name="error_connection">Please check your internet connection. Try again</string>
    <string name="error_event">Event not available</string>

    <string name="plan">TARIFF PLAN</string>
    <string name="settings">Settings</string>

    <string name="plan_couple">1000</string>
    <string name="app_search">Event search</string>

    <string name="plan_female">0</string>

    <string name="plan_male">1000</string>

    <string name="total_payble">TOTAL PAYABLE</string>
    <string name="lbl_general">GENERAL</string>
    <string name="lbl_contactus">CONTACT US</string>
    <string name="select_people">SELECT NUMBER OF PEOPLE</string>

    <string name="lb_sign_in">Sign In</string>
    <string name="lb_sign_up">Sign Up</string>
    <string name="lb_forgot_password">Forgot Password</string>
    <string name="lb_newuser">New here ? Sign Up</string>
    <string name="lb_email">Email*</string>
    <string name="lb_password">Password*</string>
    <string name="progress_loading">Please wait...</string>

    <string name="lb_facebook">Facebook</string>
    <string name="lb_googleplus">Google</string>

    <string name="lb_fname">First Name*</string>
    <string name="lb_lname">Last Name*</string>
    <string name="lb_contactno">Contact No*</string>
    <string name="lb_dob">DOB (Optional YY-MM-DD)</string>
    <string name="lb_anniversary">Anniversary (Optional)</string>


    <string name="lbl_address">Hauz khas, ABC Hotel</string>
    <string name="lbl_book">Book Now</string>
    <string name="lbl_price">Free</string>
    <string name="lbl_time">Sun, 8th May 11:00 PM</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_write_review">Write Review</string>


    <string name="error_invalid_input">Invalid Input</string>
    <string name="error_email">Enter Email ID</string>
    <string name="error_invalid_email">Invaid  Email ID</string>
    <string name="error_password">Enter Password</string>
    <string name="lb_login">Login</string>
    <string name="lb_registration">Registration</string>

    <string name="lb_search_result">Search Result</string>

    <string name="lb_reviews">Reviews</string>
    <string name="lb_nearby">NearBy</string>

    <string name="error_fname">Enter First Name</string>
    <string name="error_lname">Enter Last Name</string>
    <string name="error_contact">Enter Contact Number</string>
    <string name="error_contact_10">Enter 10 Digit Contact Number</string>


    <string name="error_network_title"><b>NO INTERNET CONNECTION</b></string>
    <string name="error_network_msg">Sorry, looks like there is no internet connection. Please check your Wi-Fi or data connectivity.</string>
    <string name="try_again">TRY AGAIN</string>

    <string name="GPSAlertDialogMessage">Enable GPS location</string>
    <string name="GPSAlertDialogTitle">Location Required !</string>
    <string name="cancel">Cancel</string>
    <string name="facebook_app_id">1732649813622740</string>


    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <string name="menu_about">About</string>
    <string name="menu_events">Events</string>
    <string name="menu_nearby">Nearby</string>
    <string name="menu_bookings">My Bookings</string>
    <string name="menu_share">Share App</string>
    <string name="menu_logout">Logout</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/menu_about</item>
        <item>@string/menu_events</item>
        <item>@string/menu_nearby</item>
        <item>@string/menu_bookings</item>
        <item>@string/menu_share</item>
        <item>@string/settings</item>
        <item>@string/menu_logout</item>
    </string-array>

    <string-array name="spinner_list_item_array">
        <item>Delhi</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/about</item>
        <item>@drawable/events</item>
        <item>@drawable/nearby</item>
        <item>@drawable/history</item>
        <item>@drawable/share</item>
        <item>@drawable/settings</item>
        <item>@drawable/logout</item>
    </array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <!-- POLICies -->
    <string name="lbl_policies">The user hereby consents, expresses and agrres that he has read and fully understand the Privacy
        policy of events entertainment in respect of the app.

    This is privacy and cookies policy for http://www.partynearby.com and the Party Nearby application.</string>

    <string name="accept">OK</string>
    <string name="eula_string">COPYRIGHTS:

    \nCopyright 2016 PARTY NEARBY. All Rights Reserved.

    \n\nThis software may not, in whole or in any part, be copied, reproduced, transmitted, translated (into any
    language, natural or computer), stored in a retrieval system, reduced to any electronic medium or machine readable
    format, or by any other form or means without prior consent, in writing, from PARTY NEARBY.

    \n\nYou are granted a limited license to use this software. The software may be used or copied only in accordance
    with the terms of that license, which is described in the following paragraphs.

    \n\nTRADEMARKS:
    \n\n[Software logos, icons, etc that are Trademarked]

    \n\nLICENSE:
    \n\n\"THE SOFTWARE\" shall be taken to mean the software contained in this app and any subsequent versions
    or upgrades received as a result of having purchased this app. \"BUYER\" shall be taken as the original
    purchaser of the software.

    \n\nBuyer has the non-exclusive right to the use of software only on a single device. Buyer may not electronically
    transfer the program from one device to another over any type of network. Buyer may not distribute copies
    of the software or the accompanying documentation to others either for a fee or without charge. Buyer may not modify
    or translate the program or documentation. User may not disassemble the program or allow it to be disassembled
    into its constituent source code. Buyer\'s use of the software indicates his/her acceptance of these terms
    and conditions. If buyer does not agree to these conditions, return the distribution media, documentation, and
    associated materials to the vendor from whom the software was purchased, and/or uninstall the software from the device,
    and erase the software from any and all storage devices upon which it may have been installed.

    \n\nThis license agreement shall be governed by the laws of The India and
    shall inure to the benefit of PARTY NEARBY or its assigns.

    \n\nDISCLAIMER / LIMITATION OF LIABILITY:
    \n\nBuyer acknowledges that the software may not be free from defects and may not satisfy all of buyer\'s
    needs. PARTY NEARBY warrants all media on which the software is distributed for 30 days to be free from defects
    in normal use. The software and any accompanying written materials are licensed \"AS IS\". Buyer\'s exclusive
    remedy during the warranty period (if any) shall consist of replacement of distribution media if determined to be
    faulty. In no event will PARTY NEARBY be liable for direct, indirect, incidental or consequential damage or
    damages resulting from loss of use, or loss of anticipated profits resulting from any defect in the software,
    even if it has been advised of the possibility of such damage. Some laws do not allow exclusion or limitation
    of implied warranties or liabilities for incidental or consequential damages, so the above limitations or
    exclusion may not apply.

    \n\nSPECIFIC RESTRICTIONS:
    \n\nIn accordance with the COMPUTER SOFTWARE RENTAL ACT OF 1990, this software may not be rented, lent or leased.
    \n\nThe software and accompanying documentation may not be provided by a \"Backup Service\" or any other vendor
    which does not provide an original package as composed of PARTY NEARBY, including but not limited to all original
    distribution media, documentation, registration cards, and insertions.</string>

    <string name="about_string">The Party NearBy APP. India\'s Leading App For Party Animals. Some of the best
     foot-tapping party destination is nearby for the most adventurous party.Some of the best foot-tapping party
     destination is nearby for the most
     adventurous party attendees.

     \n\n2 taps and you can browse the most happening events in your city.
     From Clubbing to karaoke, stand-up comedy, live bands, ladies night, cocktail tasting and much more.Come on,
      let’s get this party started!.</string>
</resources>
