<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.suleiman.material.activities.TabsHeaderActivity">

    <item
        android:id="@+id/location"
        android:title="Delhi"
        android:visible="false"
        app:showAsAction="always" />



    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="always|collapseActionView"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/lbl_skip"
        app:showAsAction="always" />

    <item
        android:id="@+id/write_review"
        android:orderInCategory="100"
        android:title="@string/lbl_write_review"
        app:showAsAction="never" />

</menu>
