<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frag_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light">



    <ProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:layout_gravity="top|center"
        android:layout_marginRight="5dp"

        />


    <LinearLayout
        android:id="@+id/rl_network"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_large"
            android:layout_marginTop="10dp"
            android:text="@string/error_network_title"
            android:layout_gravity="top"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginRight="5dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_large"
            android:layout_marginTop="10dp"
            android:text="@string/error_network_msg"
            android:layout_gravity="top"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginRight="5dp"

            />

        <Button
            android:id="@+id/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_large"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_image"
            android:text="@string/try_again"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginRight="5dp"

            />


    </LinearLayout>

    <TextView
        android:id="@+id/empty_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="@dimen/font_size_large"
        android:layout_marginTop="10dp"
        android:layout_gravity="top"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginRight="5dp"

        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/frag_scrollableview"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>