<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">


    <include
        android:id="@+id/bar"
        layout="@layout/toolbar_w_shadow" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar"

        android:background="#fff"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="#FF4081"
                    android:singleLine="true"
                    android:hint="@string/lb_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:drawableTint="#FF4081"
                    android:hint="@string/lb_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_size_default"
                android:background="@color/btn_color"
                android:text="Sign in"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:text="Forgot Password?" />


        </LinearLayout>

        <LinearLayout
            android:layout_above="@+id/rl_rl"
            android:weightSum="1"
            android:id="@+id/social_lay"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/font_size_default"
            >


            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <Button
                android:text="Facebook"
                android:textColor="@android:color/white"
                android:id="@+id/facebook"
                android:layout_marginTop="5dp"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="45dp"
                style="@style/FacebookLoginButton"

                />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_sign_in"
                android:visibility="visible"
                android:layout_marginBottom="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_alignParentRight="true"
                android:text="@string/lb_googleplus"
                android:textColor="@android:color/white"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/rl_rl"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#efefef"/>


            <Button
                android:id="@+id/reg"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lb_newuser"
                android:textColor="@android:color/holo_orange_dark" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>