<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <include
        android:id="@+id/bar"
        layout="@layout/toolbar_w_shadow" />

    <LinearLayout
        android:layout_margin="@dimen/font_size_default"
        android:layout_below="@+id/bar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="@dimen/text_padding"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="@dimen/fab_margin"
            android:text="@string/lbl_general" />

    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_location"
            android:padding="@dimen/text_padding"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_room_24dp"/>

            <TextView
                android:id="@+id/location_txt"
                android:layout_toRightOf="@+id/img"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="@dimen/text_padding"
                android:textColor="@color/teal2"
                android:textStyle="normal"
                android:textSize="@dimen/fab_margin"
                android:text="New Delhi, India" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:alpha="0.2"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:id="@+id/terms_rl"
            android:padding="@dimen/text_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img2"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/terms"/>

            <TextView
                android:layout_toRightOf="@+id/img2"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="@dimen/text_padding"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:textSize="@dimen/fab_margin"
                android:text="@string/lbl_terms" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:alpha="0.2"
                android:src="@drawable/ic_action_next_item"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:id="@+id/rate_rl"
            android:padding="@dimen/text_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img3"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/rate"/>

            <TextView
                android:layout_toRightOf="@+id/img3"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="@dimen/text_padding"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:textSize="@dimen/fab_margin"
                android:text="Rate this App" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:alpha="0.2"
                android:src="@drawable/ic_action_next_item"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="@dimen/text_padding"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/fab_margin"
                android:text="@string/lbl_contactus" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/email_rl"
            android:padding="@dimen/text_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img4"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/email"/>

            <TextView
                android:layout_toRightOf="@+id/img4"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="@dimen/text_padding"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:textSize="@dimen/fab_margin"
                android:text="info@partynearby.com" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/contact_rl"
            android:padding="@dimen/text_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img5"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_call_24dp"/>

            <TextView
                android:layout_toRightOf="@+id/img5"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="@dimen/text_padding"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:textSize="@dimen/fab_margin"
                android:text="+91-9555-790-719" />


        </RelativeLayout>


    </LinearLayout>



</RelativeLayout>